--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Git credentials
-GIT_NAME="glennvhalado"
+GIT_NAME="Glenn Vhalado"
 GIT_EMAIL="gvhalado@gmail.com"
 REPO_URL="https://github.com/glennvhalado/ossdao"
 BRANCH_NAME="main"
